--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <div id="homebackgroundpic">
 
         <div class="headerLogo">
-            <img id="logoImg" src="logo.png" alt="Logo" href="homepageindex.html">              
+            <img id="logoImg" src="logo.png" alt="Logo" href="index.html">              
             <h1 onclick="window.location.href='#';">MYOGA</h1>
             <ul id="menu">
                 <li> <a href="#">HOME</a> </li>       
