connecting the contact page

--- a/homepageindex.html
+++ b/homepageindex.html
@@ -24,9 +24,9 @@
             <h1 onclick="window.location.href='#';">MYOGA</h1>
             <ul id="menu">
                 <li> <a href="#">HOME</a> </li>       
-                <li> <a href="#">TIMETABLE</a> </li>  
+                <li> <a href="window.location.href='#imgTimetable';">TIMETABLE</a> </li>  
                 <li> <a href="#">ABOUT US</a> </li>   
-                <li> <a href="#">CONTACT US</a> </li> 
+                <li> <a href="contact.html">CONTACT US</a> </li> 
             </ul>
     </div>
 
