connected to index.html

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         </div>
 
         <nav>
-            <a href="#">Home</a>        <!-- ----!!!!!Link!!!!!!---- -->
+            <a href="index.html">Home</a>        <!-- ----!!!!!Link!!!!!!---- -->
             <a href="#">Timetable</a>   <!-- ----!!!!!Link!!!!!!---- -->
             <a href="#">About Us</a>    <!-- ----!!!!!Link!!!!!!---- -->
             <a href="#">Contact Us</a>  <!-- ----!!!!!Link!!!!!!---- -->
