--- a/contact-page-CapeTownKimmy/contact.html
+++ b/contact-page-CapeTownKimmy/contact.html
@@ -26,7 +26,7 @@
         </div>
 
         <nav>
-            <a href="../homepageindex.html">Home</a>    
+            <a href="../index.html">Home</a>    
             <a href="../timetablemyoga.jpeg">Timetable</a>  
             <a href="#">About Us</a>    <!-- ----!!!!!Link!!!!!!---- -->
             <a href="./contact.html">Contact Us</a> 
