--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li> <a href="#">HOME</a> </li>       
                 <li> <a href="window.location.href='#imgTimetable';">TIMETABLE</a> </li>  
                 <li> <a href="#">ABOUT US</a> </li>   
-                <li> <a href="contact.html">CONTACT US</a> </li> 
+                <li> <a href="./contact-page-CapeTownKimmy/contact.html">CONTACT US</a> </li> 
             </ul>
     </div>
 
