--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul id="menu">
                 <li> <a href="#">HOME</a> </li>       
                 <li> <a href="window.location.href='#imgTimetable';">TIMETABLE</a> </li>  
-                <li> <a href="#">ABOUT US</a> </li>   
+                <li> <a href="aboutus.html">ABOUT US</a> </li>   
                 <li> <a href="./contact-page-CapeTownKimmy/contact.html">CONTACT US</a> </li> 
             </ul>
     </div>
