link to about us

--- a/contact-page-CapeTownKimmy/contact.html
+++ b/contact-page-CapeTownKimmy/contact.html
@@ -28,7 +28,7 @@
         <nav>
             <a href="../index.html">Home</a>    
             <a href="../timetablemyoga.jpeg">Timetable</a>  
-            <a href="#">About Us</a>    <!-- ----!!!!!Link!!!!!!---- -->
+            <a href="../aboutus.html">About Us</a>    <!-- ----!!!!!Link!!!!!!---- -->
             <a href="./contact.html">Contact Us</a> 
         </nav>
     </header>
