--- a/aboutus.html
+++ b/aboutus.html
@@ -20,16 +20,16 @@
     
           <ul class="navbar-nav float-end">
             <li class="nav-item">
-              <a class="nav-link" href="#">HOME</a>
+              <a class="nav-link" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">TIMETABLE</a>
+              <a class="nav-link" href="#imgTimetable">TIMETABLE</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">ABOUT US</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT</a>
+                <a class="nav-link" href="contact.html">CONTACT</a>
               </li>
           </ul>
         </div>
